--- a/src/components/SearchAdvice/SearchAdvice.scss
+++ b/src/components/SearchAdvice/SearchAdvice.scss
@@ -1,12 +1,14 @@
 .search-advice-wrapper {
   display: flex;
+  padding: 5px 10px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .advices-list {
-  width: 90%;
+  width: 95%;
+  margin-left: 10px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
