--- a/src/components/SearchAdvice/SearchAdvice.scss
+++ b/src/components/SearchAdvice/SearchAdvice.scss
@@ -5,6 +5,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  .loader {
+    margin: 10px;
+  }
+  input {
+    margin-top: 5px
+  }
 }
 
 .advices-list {
@@ -19,4 +26,8 @@
     text-align: start;
     text-indent: 10px;
   }
+}
+
+.status-message {
+  margin: 10px;
 }
